--- a/Beesiness/Views/Colmena/ColmenaGeneral.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaGeneral.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/css/index.css" />
 </head>
 <h1 class="text-center">Administrar Colmenas</h1>
-<a asp-controller="Agenda" asp-action="AgendaIndex">Correo</a>
+<!-- <a asp-controller="Agenda" asp-action="AgendaIndex">Correo</a>-->
 <div class="row">
     <div class="card mx-auto image-fade-in-expand card-personalizada" style="width: 15rem;">
         <img src="/css/createcolmena.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
