--- a/Beesiness/Views/Enfermedad/EnfermedadGeneral.cshtml
+++ b/Beesiness/Views/Enfermedad/EnfermedadGeneral.cshtml
@@ -16,14 +16,14 @@
             <a asp-action="EnfermedadCrear" class="btn btn-primary">Ingresar enfermedad</a>
         </div>
     </div>
-    <div class="card mx-auto image-fade-in-expand card-personalizada" style="width: 15rem;">
+    <!--<div class="card mx-auto image-fade-in-expand card-personalizada" style="width: 15rem;">
         <img src="/css/verenfermedad.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
         <div class="card-body">
             <h5 class="card-title">Ver enfermedades</h5>
             <p class="card-text">¿Necesitas ver, editar o eliminar alguna enfermedad?, ¡has llegado al apartado correcto!</p>
             <a asp-action="EnfermedadCrear" class="btn btn-primary">Ver enfermedades</a>
         </div>
-    </div>
+    </div>-->
     <div class="card mx-auto image-fade-in-expand card-personalizada" style="width: 15rem;">
         <img src="/css/infoenfermedad.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
         <div class="card-body">
