--- a/Beesiness/Views/Colmena/ColmenaCrear.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaCrear.cshtml
@@ -1,9 +1,16 @@
 ﻿@model ColmenaViewModel
 @{
 }
-<div>
-    <h2>Crear Colmena</h2>
-</div>
+<head>
+    <link href="/css/usuarios.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/index.css" />
+    @section Scripts {
+        <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmrnF-1-dvaNYDUkUuogYW8SOvy2cut1Xdxs4EzsahlVv8HrT_MvGx0HPKP8dOlZ&callback=mapLoaded' async defer></script>
+        <script src="/js/ubicacion.js"></script>
+        <script src="/js/colmenaCreate.js"></script>
+    }
+</head>
+<h2 style="text-align: center;">Crear colmena</h2>
 <div>
     <form class="row justify-content-evenly" asp-action="ColmenaCrear" method="post">
         <div class="col-md-6">
@@ -12,8 +19,9 @@
                 <input asp-for="numIdentificador" class="form-control" placeholder="Número de identificación" />
                 <span asp-validation-for="numIdentificador" class="text-danger"></span>
             </div>
+            <span id="validationMessage" style="display: none; color: red; /* más estilos aquí */"></span>
             <div class="form-group mt-3">
-                <input asp-for="FechaIngreso" class="form-control" placeholder="Fecha de Ingreso Colmena" />
+                <input asp-for="FechaIngreso" id="fechaIngreso" class="form-control" placeholder="Fecha de Ingreso Colmena" />
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
@@ -51,36 +59,3 @@
         </div>
     </form>
 </div>
-
-@section Scripts {
-    <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmrnF-1-dvaNYDUkUuogYW8SOvy2cut1Xdxs4EzsahlVv8HrT_MvGx0HPKP8dOlZ&callback=mapLoaded' async defer></script>
-    <script src="/js/ubicacion.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var tipoColmenaSelect = document.getElementById('tipoColmenaSelect');
-            var ubicacionSelect = document.getElementById('UbicacionPredeterminada'); // Agregar esto
-
-            tipoColmenaSelect.addEventListener('focus', function () {
-                var defaultOption = document.getElementById('defaultOption');
-                if (defaultOption) {
-                    tipoColmenaSelect.removeChild(defaultOption);
-                }
-            });
-
-            ubicacionSelect.addEventListener('focus', function () { // Agregar esto
-                var defaultUbicacionOption = document.getElementById('defaultUbicacionOption');
-                if (defaultUbicacionOption) {
-                    ubicacionSelect.removeChild(defaultUbicacionOption);
-                }
-            });
-            ubicacionSelect.addEventListener('change', function (e) {
-                if (e.target.value) {
-                    var selectedLocation = JSON.parse(e.target.value);
-                    console.log("Ubicación seleccionada:", selectedLocation); // Para depuración
-                    updateMapToLocation(selectedLocation);
-                }
-            });
-        });
-
-    </script>
-}
