--- a/Beesiness/Views/Colmena/ColmenaEditar.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaEditar.cshtml
@@ -1,69 +1,48 @@
-﻿@model ColmenaViewModel
+﻿@model Beesiness.Models.ColmenaViewModel
+@{
+    ViewData["Title"] = "Editar Colmena";
 }
 
-<div>
-        <h2>Editando Colmena: <strong>@Model.Id</strong> Fecha creacion: <strong>@Model.FechaIngreso</strong></h2>
-</div>
+<head>
+    <!-- Incluir los estilos y scripts necesarios -->
+    <link href="/css/usuarios.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/index.css" />
+    @section Scripts {
+        <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmrnF-1-dvaNYDUkUuogYW8SOvy2cut1Xdxs4EzsahlVv8HrT_MvGx0HPKP8dOlZ&callback=mapLoaded' async defer></script>
+        <script src="/js/colmenaEdit.js"></script>
+    }
+</head>
 
+<h2 style="text-align: center;">Editar Colmena</h2>
 <div>
     <form class="row justify-content-evenly" asp-action="ColmenaEditar" method="post">
         <div class="col-md-6">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <input type="hidden" asp-for="Id" />
+
             <div class="form-group mt-3">
-                <input asp-for="Id" class="form-control" placeholder=@Model.Id readonly />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group mt-3">
-                <input asp-for="numIdentificador" class="form-control" placeholder=@Model.numIdentificador />
+                <label for="numIdentificador">Número de Identificación</label>
+                <input asp-for="numIdentificador" class="form-control" />
                 <span asp-validation-for="numIdentificador" class="text-danger"></span>
             </div>
+
             <div class="form-group mt-3">
-                <input asp-for="FechaIngreso" class="form-control" placeholder=@Model.FechaIngreso />
-                <span asp-validation-for="FechaIngreso" class="text-danger"></span>
-            </div>
-            <div class="form-group mt-3">
-                <select asp-for="TipoColmena" class="form-control" id="tipoColmenaSelect">
-                    <option value="" id="defaultOption">Seleccione un tipo de colmena</option>
-                    <option value="Dadant">Dadant</option>
-                    <option value="Langstroth">Langstroth</option>
-                    <option value="Baby">Baby</option>
-                </select>
-                <span asp-validation-for="TipoColmena" class="text-danger"></span>
-            </div>
-            <div class="form-group mt-3">
-                <input asp-for="Descripcion" class="form-control" placeholder=@Model.Descripcion />
+                <label for="Descripcion">Descripción</label>
+                <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
+
             <div class="form-group mt-3">
-                <select asp-for="UbicacionPredeterminada" asp-items="Model.UbicacionesPredeterminadas" class="form-control">
-                    <option value="" id="defaultUbicacionOption">Seleccione el lugar donde estarán las colmenas</option>
-                </select>
+                <input asp-for="Latitude" type="hidden" />
+                <input asp-for="Longitude" type="hidden" />
+                <label>Ubicación de la Colmena</label>
+                <div id="myMap" style="position:relative;width:600px;height:400px;"></div>
             </div>
+
             <div class="form-group mt-3">
-                <input type="submit" value="Guardar los Cambios" class="btn btn-outline-success col-12" />
+                <input type="submit" value="Guardar Cambios" class="btn btn-outline-success col-12" />
             </div>
-        </div>        
+        </div>
     </form>
 </div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var tipoColmenaSelect = document.getElementById('tipoColmenaSelect');
-        var ubicacionSelect = document.getElementById('UbicacionPredeterminadaId'); // Agregar esto
-
-        tipoColmenaSelect.addEventListener('focus', function () {
-            var defaultOption = document.getElementById('defaultOption');
-            if (defaultOption) {
-                tipoColmenaSelect.removeChild(defaultOption);
-            }
-        });
-
-        ubicacionSelect.addEventListener('focus', function () { // Agregar esto
-            var defaultUbicacionOption = document.getElementById('defaultUbicacionOption');
-            if (defaultUbicacionOption) {
-                ubicacionSelect.removeChild(defaultUbicacionOption);
-            }
-        });
-    });
-</script>
-}
-
