--- a/Beesiness/Views/Usuarios/GestionUsuario.cshtml
+++ b/Beesiness/Views/Usuarios/GestionUsuario.cshtml
@@ -1,6 +1,33 @@
-﻿@model UserListViewModel
+﻿@model EnfermedadViewModel
 
-<h2>Usuarios Registrados</h2>
+<head>
+    <link href="/css/usuarios.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/index.css" />
+    @section Scripts {
+        <script src="/js/usuarios.js"></script>
+    }
+</head>
+<h2 style="text-align: center;">Usuarios Registrados</h2>
+
+<div class="cards-container">
+    <a class="card card-personalizada card-link button" asp-controller="Home" asp-action="Index">Volver al Home</a>
+    <a class="card card-personalizada card-link button" asp-action="CreateUser">Crear nuevo usuario</a>
+    <a class="card card-personalizada card-link button" asp-controller="Auth" asp-action="RequestRegistrationIndex">Ver usuarios pendientes de registro</a>
+</div>
+
+<div class="filter-container">
+    <div class="dropdown">
+        <button class="dropbtn ">Filtrar por</button>
+        <div class="dropdown-content">
+            <a href="#" onclick="setFilterType('Nombre')">Nombre</a>
+            <a href="#" onclick="setFilterType('Correo')">Correo</a>
+            <a href="#" onclick="setFilterType('Rol')">Rol</a>
+        </div>
+    </div>
+    <span id="currentFilterType">Nombre</span> <!-- Elemento agregado para mostrar el filtro activo -->
+    <input type="text" id="searchString" placeholder="Buscar..." oninput="filterUsers()" />
+</div>
+
 
 <table class="table">
     <thead>
@@ -43,3 +70,28 @@
         }
     </tbody>
 </table>
+@if (Model.TotalPages > 1)
+{
+    <nav aria-label="User pagination">
+        <ul class="pagination">
+            @if (Model.HasPreviousPage)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="#" onclick="window.goToPage(@(Model.CurrentPage - 1))">Anterior</a>
+                </li>
+            }
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                    <a class="page-link" href="#" onclick="window.goToPage(@i)">@i</a>
+                </li>
+            }
+            @if (Model.HasNextPage)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="#" onclick="window.goToPage(@(Model.CurrentPage + 1))">Siguiente</a>
+                </li>
+            }
+        </ul>
+    </nav>
+}
