--- a/Beesiness/wwwroot/css/layout.css
+++ b/Beesiness/wwwroot/css/layout.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 120px; /* Ajusta este valor según la altura de tu navbar */
+    padding-top: 120px; 
     background-color: #ece9d4;
 }
 
