--- a/Beesiness/Views/Shared/_Layout.cshtml
+++ b/Beesiness/Views/Shared/_Layout.cshtml
@@ -40,10 +40,10 @@
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2 @(IsActive("ColmenaGeneral", "Colmena") ? "active" : "")" asp-controller="Colmena" asp-action="ColmenaGeneral">Colmenas</a>
                         </li>
-                        <!--
+                   
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2 @(IsActive("InspeccionGeneral", "Inspeccion") ? "active" : "")" asp-controller="Inspeccion" asp-action="InspeccionGeneral">Inspección</a>
-                        </li> -->
+                            <a class="nav-link mx-lg-2 @(IsActive("TareaGeneral", "Tarea") ? "active" : "")" asp-controller="Tarea" asp-action="TareaGeneral">Inspección</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2 @(IsActive("EnfermedadGeneral", "Enfermedad") ? "active" : "")" asp-controller="Enfermedad" asp-action="EnfermedadGeneral">Enfermedades</a>
                         </li>
