--- a/Beesiness/Views/Tarea/TareaEditar.cshtml
+++ b/Beesiness/Views/Tarea/TareaEditar.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model Tarea
+﻿@model Tarea
 @{
 }
 
@@ -26,7 +26,7 @@
                 <span asp-validation-for="CorreoAviso" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
-                <input asp-for="FechaRegistro" class="form-control" placeholder=@Model.FechaRegistro readonly/>
+                <input asp-for="FechaRegistro" class="form-control" placeholder=@Model.FechaRegistro readonly />
                 <span asp-validation-for="FechaRegistro" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
