--- a/Beesiness/Views/Tarea/TareaInfo.cshtml
+++ b/Beesiness/Views/Tarea/TareaInfo.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model TareaViewModel
+﻿@model TareaViewModel
 @{
     ViewData["Title"] = "Informnacion Tarea";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -17,18 +17,18 @@
     <div class="row justify-content-evenly">
         <div class="col-md-6">
             <div class="form-group mt-3">
-                <h6>Id: @Model.Id</h6>                
+                <h6>Id: @Model.Id</h6>
             </div>
             <div class="form-group mt-3">
                 <h6>Nombre: @Model.Nombre</h6>
             </div>
             <div class="form-group mt-3">
-                <h6>Descripción: </h6>
+                <h6>DescripciÃ³n: </h6>
                 <r>@Model.Descripcion</r>
             </div>
             <div class="form-group mt-3">
                 <h6>Fecha Registro: @Model.FechaRegistro</h6>
-            </div>            
+            </div>
             <div class="form-group mt-3">
                 <h6>Fecha Agendada: @Model.FechaRealizacion</h6>
             </div>
@@ -48,7 +48,7 @@
             <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Numero</th>                    
+                    <th>Numero</th>
                 </tr>
             </thead>
             <tbody>
@@ -67,7 +67,7 @@
 
                         </tr>
                     }
-                }                
+                }
             </tbody>
         </table>
     </div>
