--- a/Beesiness/Views/Shared/_Layout.cshtml
+++ b/Beesiness/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand me-auto" asp-controller="Home" asp-action="Index"><img src="/css/logo proyecto.svg" width="60" height="40" /></a>
+            <a class="navbar-brand me-auto" asp-controller="Home" asp-action="Index"><img src="/css/BEESYNC.svg" width="160" height="140" /></a>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                  aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -42,7 +42,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2 @(IsActive("Index", "ApiAI") ? "active" : "")" asp-controller="ApiAI" asp-action="Index">ApiAI</a>
+                            <a class="nav-link mx-lg-2 @(IsActive("Index", "ApiAI") ? "active" : "")" asp-controller="ApiAI" asp-action="Index">Beesync</a>
                         </li>
              
                         <li class="nav-item">
