--- a/Beesiness/wwwroot/css/Inicio.css
+++ b/Beesiness/wwwroot/css/Inicio.css
@@ -133,3 +133,4 @@
     -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
+ww
